<resources>
    <string name="app_name">Marvel Characters</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_discover">Discover</string>
    <string name="bottom_navigation_browser">Browser</string>
    <string name="bottom_navigation_my_library">My library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_heroes">TOP HEROES</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logo_name">MarvelHeroes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">SEE ALL</string>
    <string name="characters">CHARACTERS</string>
    <string name="chars">CHARS</string>
    <string name="comics">COMICS</string>
    <string name="events">EVENTS</string>
    <string name="description">Bitten by a radioactive spider, high school student Peter Parker gained the speed, strength and powers of a spider. Adopting the name Spider-Man, Peter hoped to start a career using his new abilities. Taught that with great power comes great responsibility, Spidey has vowed to use his powers to help people.</string>
</resources>
