<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorTopNavigationBar"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_events"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/red"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/events"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/bt_events"
                android:layout_toLeftOf="@+id/bt_signIn"
                android:layout_toRightOf="@id/bt_events"
                android:layout_toStartOf="@+id/bt_signIn"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/logo_name"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/bt_signIn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/colorTopNavigationBar"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>

</merge>