<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorTopNavigationBar"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="6dp">

        <RelativeLayout
            android:id="@+id/home_second_top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/bt_backHome"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorTopNavigationBar"
                android:text="Home"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_secondCharacters"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/bt_backHome"
                android:layout_toRightOf="@+id/bt_backHome"
                android:background="@drawable/background_button_unclicked"
                android:text="@string/chars"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_secondComics"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/bt_secondCharacters"
                android:layout_toRightOf="@+id/bt_secondCharacters"
                android:background="@drawable/background_button_unclicked"
                android:text="@string/comics"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_secondEvents"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/bt_secondComics"
                android:layout_toRightOf="@+id/bt_secondComics"
                android:background="@drawable/background_button_unclicked"
                android:text="@string/events"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="26dp"
                android:layout_height="26dp"

                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_back"
                android:gravity="center" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

</merge>